# test-skills

skill-eval/: .gitignore  CLAUDE.md  README.md  SKILL.md  USAGE.md  pyproject.toml  requirements.txt  skill.json  skill_entry.py
skill-eval/docs/: skill-evaluator-product.md  yuque_update_payload.json
skill-eval/eval-viewer/: generate_report.py  report.html
skill-eval/evals/: evals.json
skill-eval/evaluator/: cli.py  config.py  judge_worker.py  pipeline.py
skill-eval/evaluator/judge/: llm_judge.py
skill-eval/evaluator/layers/: base.py  layer1_screening.py  layer2_static.py  layer3_testgen.py  layer4_dynamic.py  layer5_report.py  layer6_aggregate.py  tool_checker.py
skill-eval/evaluator/mcp_bridge/: __init__.py  worker.py
skill-eval/evaluator/models/: evals.py  exceptions.py  results.py  skill.py
skill-eval/openspec/changes/add-tool-install-validation/: proposal.md  tasks.md
skill-eval/openspec/changes/add-tool-install-validation/specs/: tool-availability-checker.md
skill-eval/scripts/: batch_evaluate.py  code_quality_check.py  layer1_quick_filter.py  layer3_generate_test_cases.py  layer4_dynamic_eval.py  run_evaluation.py  security_check.py  test_claude_cli.py  utils.py
